Better reference file detection + info output Added examples of missing keys + unknown keys

--- a/examples/Test_fr.properties
+++ b/examples/Test_fr.properties
@@ -5,4 +5,4 @@ error1=Vous avez une erreur ({0})
 error2=Drole de montant {0}
 error3=Drole de date {0}
 error4=Drole de texte {0}
-
+exotic=Only in this file
